--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,14 @@
+*********
 Changelog
-=========
+*********
 
-0.1 (unreleased)
-----------------
+0.1.1 (unreleased)
+==================
 
-  * ...
+* Added tests
+* ...
+
+0.1 (2019-01-17)
+================
+
+* Initial release
